<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="link_registrasi">Registrasi? Klik Disini</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="link_login">Login? Klik Disini</string>
    <string name="nama">Nama</string>
    <string name="description">Deskripsi</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah">Tambah</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>